--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,3 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/js/all.js": "/js/all.js",
-    "/css/all.css": "/css/all.css"
+    "/js/app.js": "/js/app.js"
 }
