--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "sass": "^1.37.5",
         "sass-loader": "^7.1.0",
         "vue": "^2.6.14",
-        "vue-template-compiler": "^2.6.14"
+        "vue-template-compiler": "^2.6.14",
+        "vuejs-paginate": "^2.1.0"
     },
     "dependencies": {}
 }
